<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.example.started</groupId>
  <artifactId>started-core</artifactId>
  <version>0.0.1</version>
  <packaging>pom</packaging>

  <name>started-core</name>
  <description>父pom</description>
  <url>/</url>

  <modules>
    <module>common</module>
    <module>auth</module>
    <module>config-server</module>
    <module>eureka-server</module>
    <module>gateway</module>
    <module>server-demo</module>
    <module>generator</module>
    <module>api</module>
    <module>dynamic-datasource</module>
    <module>forum</module>
    <module>module-aggregator</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.target>21</maven.compiler.target>
    <maven.compiler.source>21</maven.compiler.source>
    <java.version>21</java.version>
    <spring-cloud.version>2025.0.0</spring-cloud.version>
    <spring-boot.version>3.5.7</spring-boot.version>
    <junit.version>4.13.1</junit.version>
    <mybatisplus.version>3.5.7</mybatisplus.version>
    <mysql.version>8.0.31</mysql.version>
    <commons.lang.version>3.7</commons.lang.version>
    <commons.io.version>2.7</commons.io.version>
    <maven.build.timestamp.format>yyyyMMddHH</maven.build.timestamp.format>
    <graalvm.version>25.0.1</graalvm.version>  <!-- 或使用最新版本 -->
    <native-build-tools.version>0.10.4</native-build-tools.version>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>${spring-cloud.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>com.example.started</groupId>
        <artifactId>common-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.example.started</groupId>
        <artifactId>common-exception</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.example.started</groupId>
        <artifactId>auth-validate</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons.io.version}</version>
      </dependency>
      <dependency>
        <groupId>com.baomidou</groupId>
        <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
        <version>${mybatisplus.version}</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>
  </dependencies>

  <build>
    <finalName>${project.name}-${project.version}-${maven.build.timestamp}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>21</source>
          <target>21</target>
          <encoding>UTF-8</encoding>
          <verbose>true</verbose>
          <fork>true</fork>
          <executable>${java.home}/bin/javac</executable>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
